the shuttle title text will now word wrap around the "refresh" button for webkit phones [#528 tagged:fixed responsible:yuki]
- had to add a dummy div to the webkit shuttle times template, that lowers the route summary text just enough to prevent it from needing to wrap around the refresh button.

--- a/mobi-web/shuttleschedule/Webkit/shuttletrack.css
+++ b/mobi-web/shuttleschedule/Webkit/shuttletrack.css
@@ -53,9 +53,10 @@
 }
 
 #refresh {
-	position: absolute;
-	top: 8px;
-	right: 8px;
+	float: right;
+        position: relative;
+	top: -4px;
+	right: -4px;
 	font-size: 14px;
 }
 
